# open-bookmark

./: README.md  index.html  open-bookmark.cabal  open-bookmarks.cabal  params.json
app/: Main.hs  OptionParser.hs
src/: App.hs  Bookmark.hs  Config.hs  FirefoxBookmark.hs  Main.hs  Main1.bak  Main1.hs  OptionParser.hs  Tag.hs  Utils.hs
src/Api/: Bookmark.hs  Cloud.hs  Core.hs  Core1.hs  Internal.hs
src/BookmarkCloud/: Config.hs  Utils.hs
src/BookmarkCloud/Core/: Bookmark.hs  Bookmarkable.hs  Tag.hs  Taggable.hs
src/BookmarkCloud/Data/: DataStore.hs
src/Client/: Firefox.hs  FirefoxBookmark.hs
src/Cloud/: App.hs  Cloud.hs  Config.hs  Engine.hs  Store.hs  Types.hs  Utils.hs
src/Cloud/Core/: Bookmarkable.hs  Cloud.hs  DataStore.hs  Engine.hs  Store.hs  Taggable.hs  Types.hs
test/: doctests.hs
test/Api/: CoreSpec.hs
test/Cloud/: CloudSpec.hs  EngineSpec.hs  StoreSpec.hs  TypesSpec.hs
test/Test/: Main.hs
