name:                open-bookmark
version:             0.3.5.0
-- synopsis:
-- description:
-- license:
--license-file:        LICENSE
author:              valyakuttan
maintainer:          kuttixxxl@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.22

library
  hs-source-dirs:      src
  exposed-modules:     Api.Cloud
                       Api.Core
                       Client.Firefox

  other-modules:       Cloud.App
                       Cloud.Cloud
                       Cloud.Config
                       Cloud.Engine
                       Cloud.Store
                       Cloud.Types
                       Cloud.Utils
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , errors >= 2.0
                     , filepath
                     , mtl >= 2.2
                     , lens >= 4.10
                     , optparse-applicative >= 0.11
                     , random
                     , text
                     , time
                     , transformers
                     , unordered-containers
  default-language:    Haskell2010

executable bookmark-app
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       OptionParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , optparse-applicative
                     , directory
                     , open-bookmark
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , directory
                     , doctest
                     , filepath
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , errors >= 2.0
                     , mtl >= 2.2
                     , directory
                     , containers
                     , unordered-containers
                     , filepath
                     , lens >= 4.10
                     , aeson
                     , time
                     , text
                     , bytestring
                     , transformers
                     , QuickCheck
                     , hspec
  default-language:     Haskell2010

source-repository      head
  type:                git
  location:            git@github.com:valyakuttan/open-bookmarks.git
